# gemini-web-navigator

./: Dockerfile  README.md  agent.py  cloudbuild.yaml  main.py  pyproject.toml  railway.toml
.github/workflows/: ci.yml
static/: index.html
