[project]
name = "gemini-web-navigator"
version = "1.0.0"
description = "Universal Web Navigator Agent powered by Gemini 2.0 Flash vision"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "playwright>=1.42.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]
